<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Marble Maze</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Title">Marble Maze</string>
    <string name="text_highscore_button">High Scores!</string>
    <string name="text_play_button">Play the Game!</string>
    <string name="text_settings_button">Game settings</string>
    <string name="highscore">Higest Scores!</string>
    <string name="settings_sound">Sound Settings</string>
    <string name="settings_Graphics">Graphics Settings</string>
    <string name="settings_Radio_2DGraphics">2D graphics</string>
    <string name="settings_Radio_Title_OpenGL1">Low quality 3D</string>
    <string name="settings_Radio_Text_OpenGL2">Medium Quality 3D</string>
    <string name="settings_Sensor_Sensitivity">Sensor Sensitivity</string>
    <string name="settings_Radio_Title_OpenGL3">High Quality 3D</string>
	<string name="settings_Sensor_List_Title">List of Sensors</string>
	
</resources>
