<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/title_marble"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:gravity="center"
        android:text="@string/Title"
        android:textColor="#000000"
        android:textSize="72sp"
        android:textStyle="bold"
        android:typeface="monospace" />
    
    <Button
        android:id="@+id/play_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:onClick="executePlayGame"
        android:text="@string/text_play_button" />
    
    <Button
        android:id="@+id/settings_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:onClick="executeSettings"
        android:text="@string/text_settings_button" />

    <Button
        android:id="@+id/highscore_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:onClick="executeHighScore"
        android:text="@string/text_highscore_button" />
    
</LinearLayout>